--- a/ALPR/main.ipynb
+++ b/ALPR/main.ipynb
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "!pip install ultralytics\n",
-    "!pip install -U ipywidgets"
+    "%pip install ultralytics\n",
+    "%pip install -U ipywidgets"
    ]
   },
   {
