--- a/ALPR/main.ipynb
+++ b/ALPR/main.ipynb
@@ -2619,7 +2619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pytesseract"
+    "%pip install pytesseract"
    ]
   },
   {
@@ -2845,7 +2845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
