--- a/ALPR/main.ipynb
+++ b/ALPR/main.ipynb
@@ -396,9 +396,9 @@
    ],
    "source": [
     "# Create YOLO format folders for train, validation, and test splits\n",
-    "make_split_folder_in_yolo_format(\"train\", train)\n",
-    "make_split_folder_in_yolo_format(\"val\", val)\n",
-    "make_split_folder_in_yolo_format(\"test\", test)"
+    "#make_split_folder_in_yolo_format(\"train\", train)\n",
+    "#make_split_folder_in_yolo_format(\"val\", val)\n",
+    "#make_split_folder_in_yolo_format(\"test\", test)"
    ]
   },
   {
@@ -2845,7 +2845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
